[workspace]
resolver = "2"
members = [
    "bt-ctrl-proxy",
    "operator-interface",
    "robot",
    "messages"
]

[workspace.dependencies]
adafruit_motorkit = "0.1.1"
bluer = { version = "0.17.1", features = ["rfcomm", "bluetoothd"] }
clap = { version = "4.5.7", features = ["derive"] }
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
eyre = "0.6.12"
futures-lite = "2.3.0"
linux-embedded-hal = "0.4.0"
log = "0.4.21"
pwm-pca9685 = "1.0.0"
once_cell = "1.19.0"
rustix = { version = "0.38.34", default-features = false, features = ["net"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "rt", "sync", "time"] }

[patch.'crates-io']
# patch for embedded-hal 1.0 support
adafruit_motorkit = { git = "https://github.com/bollian/adafruit_motorkit", rev = "e22985f100929bd5db0c9fdce89712da1f57e77b" }
