[metadata]
name = mappie
author = Ian Boll
author_email = mainbollian@gmail.com
version = 0.1.0
license = MPL2
url = "https://github.com/bollian/mappie"
description = Learning ROS and mapping my house

[options]
package_dir =
    = src
# locate packages automatically
packages = find:

[options.packages.find]
where = src
