[package]
name = "bt-ctrl-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.1", features = ["rfcomm"] }
clap = { version = "4.4.16", features = ["derive"] }
env_logger = { version = "0.10.1", default-features = false, features = ["auto-color", "humantime"] }
eyre = "0.6.11"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["net", "rt", "sync", "time"] }
