[package]
name = "operator-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["bluetoothd", "rfcomm"] }
crossbeam = "0.8.2"
egui = "0.21.0"
egui-wgpu = { version = "0.21.0", features = ["winit"] }
egui-winit = "0.21.1"
env_logger = "0.10.0"
eyre = "0.6.8"
flume = "0.10.14"
futures = "0.3.28"
gilrs = "0.10.1"
log = "0.4.17"
once_cell = "1.17.1"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
