[package]
name = "operator-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer.workspace = true
crossbeam = "0.8.2"
egui = "0.26.0"
egui-wgpu = { version = "0.26.2", features = ["winit"] }
egui-winit = "0.26.2"
env_logger.workspace = true
eyre.workspace = true
flume = "0.10.14"
futures = "0.3.28"
gilrs = "0.10.1"
log.workspace = true
messages = { path = "../messages" }
once_cell.workspace = true
rustix.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
