[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_motorkit = "0.1.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
eyre = "0.6.11"
log = "0.4.20"
messages = { path = "../messages" }
serde_json = "1.0.112"
smol = "2.0.0"
