[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_motorkit = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
futures-lite = { workspace = true }
linux-embedded-hal = { workspace = true }
log = { workspace = true }
messages = { path = "../messages" }
pwm-pca9685 = { workspace = true }
serde_json = { workspace = true }
smol = "2.0.0"
